vuejs/vuejs-tests/testData/highlighting/multipleScriptTagsInVue/multipleScriptTagsInVue.vue
<style>
  div {}
</style>

<style>
  div {}
</style>

<<warning descr="Duplicated top-level tag script">script</warning>>
  const i = 12;
</script>

<<warning descr="Duplicated top-level tag script">script</warning>>
  const i = 12;
</script>

<<warning descr="Duplicated top-level tag template">template</warning>>
  <div></div>
  <div></div>
</template>

<<warning descr="Duplicated top-level tag template">template</warning>>
  <div></div>
  <div>
<error descr="Element div is not closed"><</error>/template>
